<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.08" />


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/money_image"
            app:layout_constraintBottom_toTopOf="@id/guideline1"
            app:layout_constraintEnd_toStartOf="@+id/textView2"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="@+id/vDisplayCost"
            app:srcCompat="@drawable/ic_icons8_money" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/appName"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="@+id/vDisplayCost"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

        <View
            android:id="@+id/vDisplayCost"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            android:background="@drawable/rounded_box"
            android:elevation="7dp"
            app:layout_constraintHeight_percent=".27"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideline1" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/Totalpersons"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:translationZ="10dp"
            app:layout_constraintEnd_toEndOf="@+id/vDisplayCost"
            app:layout_constraintStart_toStartOf="@+id/vDisplayCost"
            app:layout_constraintTop_toTopOf="@+id/vDisplayCost" />

        <View
            android:id="@+id/view3"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginHorizontal="@dimen/_24sdp"
            android:layout_marginTop="60dp"
            android:background="#c0c0c0"
            android:outlineProvider="none"
            android:translationZ="10dp"
            app:layout_constraintEnd_toEndOf="@+id/vDisplayCost"
            app:layout_constraintStart_toStartOf="@+id/vDisplayCost"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/total_bill"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:translationZ="10dp"
            app:layout_constraintStart_toStartOf="@+id/view3"
            app:layout_constraintTop_toBottomOf="@+id/view3" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/total_tip"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:translationZ="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/tvPercentSelectedLabel"
            app:layout_constraintEnd_toEndOf="@+id/view3"
            app:layout_constraintTop_toTopOf="@+id/tvPercentSelectedLabel" />

        <TextView
            android:id="@+id/tvTotalAmountPerPerson"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/_000"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="45sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView7"
            app:layout_constraintEnd_toEndOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toTopOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:elevation="10dp"
            android:fontFamily="sans-serif-black"
            android:text="$"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintEnd_toStartOf="@+id/tvTotalAmountPerPerson"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/tvTotalAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="16dp"
            android:elevation="10dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="$000"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="?attr/colorPrimary"
            app:layout_constraintBottom_toBottomOf="@+id/vDisplayCost"
            app:layout_constraintEnd_toEndOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/tvPercentSelected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="10%"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="?attr/colorPrimary"
            app:layout_constraintBottom_toBottomOf="@+id/tvTotalAmount"
            app:layout_constraintEnd_toStartOf="@+id/tvTipAmount"
            app:layout_constraintStart_toEndOf="@+id/tvTotalAmount"
            app:layout_constraintTop_toTopOf="@+id/tvTotalAmount" />

        <TextView
            android:id="@+id/tvPercentSelectedLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="Tip %"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:translationZ="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView4"
            app:layout_constraintEnd_toStartOf="@+id/textView5"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="@+id/textView4" />

        <TextView
            android:id="@+id/tvTipAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="$000"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="?attr/colorPrimary"
            app:layout_constraintBottom_toBottomOf="@+id/tvTotalAmount"
            app:layout_constraintEnd_toEndOf="@+id/textView5"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintTop_toTopOf="@+id/tvTotalAmount" />

        <EditText
            android:id="@+id/etBaseAmount"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="40dp"
            android:background="@drawable/rounded_box"
            android:elevation="1dp"
            android:ems="10"
            android:hint="$"
            android:imeOptions="actionDone"
            android:inputType="numberDecimal"
            android:paddingHorizontal="@dimen/_10sdp"
            android:textColor="?attr/colorOnSecondary"
            android:textColorHint="?attr/colorOnSecondary"
            app:layout_constraintBottom_toBottomOf="@+id/textView12"
            app:layout_constraintEnd_toEndOf="@+id/vDisplayCost"
            app:layout_constraintStart_toEndOf="@+id/textView12"
            app:layout_constraintTop_toTopOf="@+id/tvEnterLabel" />

        <TextView
            android:id="@+id/tvEnterLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Enter"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tvChooseLabel"
            app:layout_constraintStart_toStartOf="@+id/vDisplayCost"
            app:layout_constraintTop_toBottomOf="@+id/vDisplayCost"
            app:layout_constraintVertical_chainStyle="spread" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="your bills"
            app:layout_constraintStart_toStartOf="@+id/tvEnterLabel"
            app:layout_constraintTop_toBottomOf="@+id/tvEnterLabel" />

        <TextView
            android:id="@+id/tvChooseLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Choose"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/tvSplitLabel"
            app:layout_constraintStart_toStartOf="@+id/tvEnterLabel"
            app:layout_constraintTop_toBottomOf="@id/tvEnterLabel" />

        <TextView
            android:id="@+id/tvSplitLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_24sdp"
            android:text="Split"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tvChooseLabel"
            app:layout_constraintTop_toBottomOf="@+id/tvChooseLabel" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="your tip"
            app:layout_constraintStart_toStartOf="@+id/tvChooseLabel"
            app:layout_constraintTop_toBottomOf="@+id/tvChooseLabel" />


        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="the total"
            app:layout_constraintStart_toStartOf="@+id/tvSplitLabel"
            app:layout_constraintTop_toBottomOf="@+id/tvSplitLabel" />

        <Button
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:text="10%"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/button2"
            app:layout_constraintEnd_toStartOf="@+id/button2"
            app:layout_constraintStart_toStartOf="@+id/etBaseAmount"
            app:layout_constraintTop_toTopOf="@+id/button2"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:text="15%"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/button3"
            app:layout_constraintEnd_toStartOf="@+id/button3"
            app:layout_constraintStart_toEndOf="@+id/button1"
            app:layout_constraintTop_toTopOf="@+id/button3" />

        <Button
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="20%"
            app:cornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="@+id/etBaseAmount"
            app:layout_constraintStart_toEndOf="@+id/button2"
            app:layout_constraintTop_toTopOf="@+id/tvChooseLabel" />

        <Button
            android:id="@+id/customTipButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="Custom Tip"
            app:cornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="@+id/button3"
            app:layout_constraintStart_toStartOf="@+id/button1"
            app:layout_constraintTop_toBottomOf="@+id/button2" />

        <TextView
            android:id="@+id/tvPersonsSplit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_box"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="1"
            android:textSize="@dimen/_22sdp"
            app:layout_constraintBottom_toBottomOf="@+id/plusButton"
            app:layout_constraintEnd_toStartOf="@+id/plusButton"
            app:layout_constraintStart_toEndOf="@+id/subtractButton"
            app:layout_constraintTop_toTopOf="@+id/plusButton" />

        <Button
            android:id="@+id/plusButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="+"
            android:textSize="@dimen/_16sdp"
            app:layout_constraintBottom_toBottomOf="@+id/textView16"
            app:layout_constraintEnd_toEndOf="@+id/customTipButton"
            app:layout_constraintTop_toTopOf="@+id/tvSplitLabel" />

        <Button
            android:id="@+id/subtractButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="-"
            android:textSize="@dimen/_16sdp"
            app:layout_constraintBottom_toBottomOf="@+id/plusButton"
            app:layout_constraintStart_toStartOf="@+id/customTipButton"
            app:layout_constraintTop_toTopOf="@+id/plusButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>
